--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.37.0",
+    "react-native-modalbox": "^1.3.8",
+    "react-native-spinkit": "^0.1.5",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
-    "redux-devtools": "^3.3.1"
+    "redux-devtools": "^3.3.1",
+    "redux-persist": "^4.0.0-beta1",
+    "redux-thunk": "^2.1.0"
   },
   "jest": {
     "preset": "jest-react-native"
