--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.37.0",
     "react-native-modalbox": "^1.3.8",
     "react-native-spinkit": "^0.1.5",
+    "react-native-tab-navigator": "^0.3.3",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.1",
