--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-modalbox": "^1.3.8",
     "react-native-spinkit": "^0.1.5",
     "react-native-tab-navigator": "^0.3.3",
+    "react-native-viewpager": "^0.2.13",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-devtools": "^3.3.1",
