--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "15.3.2",
     "react-native": "0.37.0",
     "react-native-modalbox": "^1.3.8",
+    "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-spinkit": "^0.1.5",
     "react-native-tab-navigator": "^0.3.3",
     "react-native-viewpager": "^0.2.13",
