--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,3 +3,6 @@ rootProject.name = 'yyb'
 include ':app'
 include ':react-native-spinkit'
 project(':react-native-spinkit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-spinkit/android')
+
+include ':react-native-baidu-map' 
+project(':react-native-baidu-map').projectDir = new File(settingsDir, '../node_modules/react-native-baidu-map/android')
