--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.37.0",
+    "react-native-baidu-map": "^0.5.0",
     "react-native-gifted-chat": "0.0.10",
     "react-native-modalbox": "^1.3.8",
     "react-native-scrollable-tab-view": "^0.7.0",
