--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-picker')
+    compile project(':react-native-baidu-map')
     compile project(':react-native-spinkit')
 	compile project(':react-native-baidu-map')
     compile fileTree(dir: "libs", include: ["*.jar"])
