--- a/ios/yyb/Info.plist
+++ b/ios/yyb/Info.plist
@@ -35,6 +35,10 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSCameraUsageDescription</key>
+	<string>we need use camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>we need use photo library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
