--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "15.3.2",
     "react-native": "0.37.0",
     "react-native-baidu-map": "^0.5.0",
+    "react-native-checkbox": "^1.1.0",
     "react-native-gifted-chat": "0.0.10",
+    "react-native-image-picker": "^0.25.1",
     "react-native-modalbox": "^1.3.8",
     "react-native-scrollable-tab-view": "^0.7.0",
     "react-native-spinkit": "^0.1.5",
